fix(<=1.20.4): compound tag read fix(<=1.19.2): fabric model loading